<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/sRezultat"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtKat" />

    <Spinner
        android:id="@+id/sKategorije"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtKat" />

    <EditText
        android:id="@+id/tekstUpit"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/dRun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sKategorije" />

    <Button
        android:id="@+id/dAdd"
        android:layout_width="97dp"
        android:layout_height="55dp"
        android:layout_marginEnd="112dp"
        android:layout_marginTop="21dp"
        android:text="@string/Dodaj_Knjigu"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sRezultat" />

    <Button
        android:id="@+id/dPovratak"
        android:layout_width="97dp"
        android:layout_height="55dp"
        android:layout_marginTop="21dp"
        android:text="@string/Nazad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sRezultat" />

    <Button
        android:id="@+id/dRun"
        android:layout_width="97dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/Pretraga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tekstUpit"
        app:layout_constraintTop_toBottomOf="@+id/sKategorije" />

    <TextView
        android:id="@+id/txtKat"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:text="@string/Kategorije"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:text="Rezultat"
        app:layout_constraintBottom_toTopOf="@+id/sRezultat"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>