<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="#FAFBFD"
            app:cardElevation="9dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="4dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/thumb"
                            android:layout_width="120dp"
                            android:layout_height="190dp"
                            android:scaleType="fitXY" />

                        <ProgressBar
                            android:id="@+id/bar"
                            style="?android:attr/progressBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:visibility="visible" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:descendantFocusability="blocksDescendants"
                        android:orientation="vertical"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp">

                        <TextView
                            android:id="@+id/eNazivP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:textSize="30sp"
                            app:layout_constraintStart_toEndOf="@+id/eNaslovna"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/eAutorP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:textSize="18sp"
                            app:layout_constraintStart_toEndOf="@+id/eNaslovna"
                            app:layout_constraintTop_toBottomOf="@+id/eNaziv" />

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/datum" />

                            <TextView
                                android:id="@+id/eDatumObjavljivanjaP"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/brojstr" />

                            <TextView
                                android:id="@+id/eBrojStranicaP"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </TableRow>

                    </LinearLayout>

                </LinearLayout>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:paddingRight="10dp">

                    <Switch
                        android:id="@+id/procitanaSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/procitana" />

                    <Switch
                        android:id="@+id/dodajKnjigu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Dodaj_Knjigu" />

                </TableRow>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="100dp"
            android:paddingLeft="5dp">

            <TextView
                android:id="@+id/eOpisP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingLeft="5dp">

        <TextView
            android:id="@+id/eKontakti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Kontakti" />

        <Spinner
            android:id="@+id/sKontakti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/dPosalji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Preporuci" />
    </LinearLayout>

</RelativeLayout>